--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
