--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 		"@emotion/react": "^11",
 		"@emotion/styled": "^11",
 		"@fontsource/montserrat": "^4.4.2",
+		"firebase": "^8.6.7",
 		"framer-motion": "^4",
 		"jwt-decode": "^3.1.2",
 		"next": "10.2.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-hook-form": "^7.8.3",
 		"react-icons": "^4.2.0",
 		"react-router-dom": "^5.2.0"
 	}
