--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"firebase": "^8.6.7",
 		"framer-motion": "^4",
 		"jwt-decode": "^3.1.2",
+		"moment": "^2.29.1",
 		"next": "10.2.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
