--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-dom": "17.0.2",
 		"react-hook-form": "^7.8.3",
 		"react-icons": "^4.2.0",
+		"react-lottie": "^1.2.3",
 		"react-router-dom": "^5.2.0"
 	}
 }
