--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react-hook-form": "^7.8.3",
 		"react-icons": "^4.2.0",
 		"react-lottie": "^1.2.3",
+		"react-messenger-customer-chat": "^0.8.0",
 		"react-router-dom": "^5.2.0"
 	}
 }
